KAFKA-17747: Trigger rebalance on rack topology changes
Signed-off-by: PoAn Yang <payang@apache.org>