@@ -46,10 +46,13 @@ import org.apache.kafka.coordinator.group.generated.ConsumerGroupMemberMetadataV
 import org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetricsShard;
 import org.apache.kafka.coordinator.group.modern.Assignment;
 import org.apache.kafka.coordinator.group.modern.MemberState;
+import org.apache.kafka.coordinator.group.modern.ModernGroup;
 import org.apache.kafka.coordinator.group.modern.SubscriptionCount;
-import org.apache.kafka.coordinator.group.modern.TopicMetadata;
 import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.timeline.SnapshotRegistry;
+
+import com.google.common.hash.HashCode;
+import com.google.common.hash.Hashing;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -57,6 +60,8 @@ import org.junit.jupiter.params.provider.CsvSource;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -651,26 +656,27 @@ public class ConsumerGroupTest {
 
         ConsumerGroup consumerGroup = createConsumerGroup("group-foo");
 
-        // It should be empty by default.
-        assertEquals(
-            Map.of(),
-            consumerGroup.computeSubscriptionMetadata(
-                consumerGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
+        Map<String, Long> topicHashCache = new HashMap<>();
+        long fooTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(fooTopicId), image.cluster());
+        long barTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(barTopicId), image.cluster());
+        long zarTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(zarTopicId), image.cluster());
 
         // Compute while taking into account member 1.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, member1),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
+        );
+        assertEquals(
+            Map.of(
+                "foo", fooTopicHash
+            ),
+            topicHashCache
         );
 
         // Updating the group with member1.
@@ -678,37 +684,44 @@ public class ConsumerGroupTest {
 
         // It should return foo now.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 1.
         assertEquals(
-            Map.of(),
-            consumerGroup.computeSubscriptionMetadata(
+            0,
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(member1, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account member 2.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, member2),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
+        );
+        assertEquals(
+            Map.of(
+                "foo", fooTopicHash,
+                "bar", barTopicHash
+            ),
+            topicHashCache
         );
 
         // Updating the group with member2.
@@ -716,118 +729,127 @@ public class ConsumerGroupTest {
 
         // It should return foo and bar.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 2.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(member2, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Removing member1 results in returning bar.
         assertEquals(
-            mkMap(
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(member1, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account member 3.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, member3),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
+        assertEquals(
+            Map.of(
+                "foo", fooTopicHash,
+                "bar", barTopicHash,
+                "zar", zarTopicHash
+            ),
+            topicHashCache
+        );
+
 
         // Updating group with member3.
         consumerGroup.updateMember(member3);
 
         // It should return foo, bar and zar.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 1, member 2 and member 3
         assertEquals(
-            Map.of(),
-            consumerGroup.computeSubscriptionMetadata(
+            0,
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(new HashSet<>(Arrays.asList(member1, member2, member3))),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 2 and member 3.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(new HashSet<>(Arrays.asList(member2, member3))),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 1.
         assertEquals(
-            mkMap(
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
-                consumerGroup.computeSubscribedTopicNames(Set.of(member1)),
-                image.topics(),
-                image.cluster()
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
+                consumerGroup.computeSubscribedTopicNames(Collections.singleton(member1)),
+                image,
+                topicHashCache
             )
         );
 
         // It should return foo, bar and zar.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
-                consumerGroup.computeSubscribedTopicNames(Set.of()),
-                image.topics(),
-                image.cluster()
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
+                consumerGroup.computeSubscribedTopicNames(Collections.emptySet()),
+                image,
+                topicHashCache
             )
         );
     }
@@ -1229,18 +1251,21 @@ public class ConsumerGroupTest {
 
         ConsumerGroup consumerGroup = createConsumerGroup("group-foo");
 
+        long fooTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(fooTopicId), image.cluster());
+        long barTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(barTopicId), image.cluster());
+
         consumerGroup.updateMember(member1);
         consumerGroup.updateMember(member2);
 
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            consumerGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            consumerGroup.computeMetadataHash(
                 consumerGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                new HashMap<>()
             )
         );
 
