@@ -29,15 +29,20 @@ import org.apache.kafka.coordinator.group.Group;
 import org.apache.kafka.coordinator.group.MetadataImageBuilder;
 import org.apache.kafka.coordinator.group.modern.Assignment;
 import org.apache.kafka.coordinator.group.modern.MemberState;
-import org.apache.kafka.coordinator.group.modern.TopicMetadata;
+import org.apache.kafka.coordinator.group.modern.ModernGroup;
 import org.apache.kafka.coordinator.group.modern.share.ShareGroup.ShareGroupState;
 import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.timeline.SnapshotRegistry;
+
+import com.google.common.hash.HashCode;
+import com.google.common.hash.Hashing;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -169,26 +174,37 @@ public class ShareGroupTest {
 
         ShareGroup shareGroup = createShareGroup("group-foo");
 
+        Map<String, Long> topicHashCache = new HashMap<>();
+        long fooTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(fooTopicId), image.cluster());
+        long barTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(barTopicId), image.cluster());
+        long zarTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(zarTopicId), image.cluster());
+
         // It should be empty by default.
         assertEquals(
-            Map.of(),
-            shareGroup.computeSubscriptionMetadata(
+            0,
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account member 1.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, member1),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
+        );
+        assertEquals(
+            Map.of(
+                "foo", fooTopicHash
+            ),
+            topicHashCache
         );
 
         // Updating the group with member1.
@@ -196,37 +212,44 @@ public class ShareGroupTest {
 
         // It should return foo now.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 1.
         assertEquals(
-            Map.of(),
-            shareGroup.computeSubscriptionMetadata(
+            0,
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(member1, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account member 2.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, member2),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
+        );
+        assertEquals(
+            Map.of(
+                "foo", fooTopicHash,
+                "bar", barTopicHash
+            ),
+            topicHashCache
         );
 
         // Updating the group with member2.
@@ -234,53 +257,61 @@ public class ShareGroupTest {
 
         // It should return foo and bar.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 2.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(member2, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Removing member1 results in returning bar.
         assertEquals(
-            mkMap(
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(member1, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account member 3.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, member3),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
+        );
+        assertEquals(
+            Map.of(
+                "foo", fooTopicHash,
+                "bar", barTopicHash,
+                "zar", zarTopicHash
+            ),
+            topicHashCache
         );
 
         // Updating group with member3.
@@ -288,64 +319,64 @@ public class ShareGroupTest {
 
         // It should return foo, bar and zar.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 1, member 2 and member 3
         assertEquals(
-            Map.of(),
-            shareGroup.computeSubscriptionMetadata(
+            0,
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(new HashSet<>(Arrays.asList(member1, member2, member3))),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 2 and member 3.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(new HashSet<>(Arrays.asList(member2, member3))),
-                image.topics(),
-                image.cluster()
+                image,
+                topicHashCache
             )
         );
 
         // Compute while taking into account removal of member 1.
         assertEquals(
-            mkMap(
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(Set.of(member1)),
-                image.topics(),
-                image.cluster()
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
+                shareGroup.computeSubscribedTopicNames(Collections.singleton(member1)),
+                image,
+                topicHashCache
             )
         );
 
         // It should return foo, bar and zar.
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2)),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(Set.of()),
-                image.topics(),
-                image.cluster()
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash),
+                HashCode.fromLong(zarTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
+                shareGroup.computeSubscribedTopicNames(Collections.emptySet()),
+                image,
+                topicHashCache
             )
         );
     }
@@ -630,6 +661,8 @@ public class ShareGroupTest {
             .addTopic(barTopicId, "bar", 2)
             .addRacks()
             .build();
+        long fooTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(fooTopicId), image.cluster());
+        long barTopicHash = ModernGroup.computeTopicHash(image.topics().getTopic(barTopicId), image.cluster());
 
         ShareGroupMember member1 = new ShareGroupMember.Builder("member1")
             .setSubscribedTopicNames(List.of("foo"))
@@ -644,14 +677,14 @@ public class ShareGroupTest {
         shareGroup.updateMember(member2);
 
         assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1)),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2))
-            ),
-            shareGroup.computeSubscriptionMetadata(
+            Hashing.combineUnordered(List.of(
+                HashCode.fromLong(fooTopicHash),
+                HashCode.fromLong(barTopicHash)
+            )).asLong(),
+            shareGroup.computeMetadataHash(
                 shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
+                image,
+                new HashMap<>()
             )
         );
 
